--- a/css/style.css
+++ b/css/style.css
@@ -61,4 +61,88 @@ nav{
     box-shadow: none;
 }
 
-/*edit field*/
+/*profile syles*/
+.icon{
+    width:75px;
+     height:75px; 
+     margin: 0;
+       position: absolute;
+       top: 90%;
+       left: 50%;
+       transform: translate(-50%, -50%); 
+}
+   .camera4{
+     display:block;
+     width:70%;
+     height:50%;
+     position:absolute;
+     top:30%;
+     left:15%;
+     background-color:#000;
+     border-radius:5px;
+   }
+   .camera4:after{
+     content:"";
+     display:block;
+     width:15px;
+     height:15px;
+     border:7px solid #fff;
+     position:absolute;
+     top:15%;
+     left:25%;
+     background-color:#000;
+     border-radius:15px;
+   }
+   .camera4:before{
+     content:"";
+     display:block;
+     width:50%;
+     height:10px;
+     position:absolute;
+     top:-16%;
+     left:25%;
+     background-color:#000;
+     border-radius:10px;
+   }
+   #profile-upload{
+       background-image:url('../assets/sample/Ironman.jpg');
+       background-size:cover;
+       background-position: center;
+       height: 230px; width: 230px;
+       border: 1px solid #bbb;
+       position:relative;top:20px;
+     border-radius:50%;
+     overflow:hidden;
+     float:none;
+     margin: auto;
+     
+   }
+   #profile-upload:hover input.upload{
+     display:block;
+   }
+   #profile-upload:hover {
+     border: 1px solid gray
+   }
+   #profile-upload:hover .hvr-profile-img{
+     opacity:1;
+    }
+   .hvr-profile-img{opacity:.3;}
+   #profile-upload input.upload {
+       z-index:1;
+       left: 0;
+       margin: 0;
+       bottom: 0;
+       top: 0;
+       padding: 0;
+       opacity: 0;
+       outline: none;
+       cursor: pointer;
+       position: absolute;
+       width:100%;
+       display:none;
+   }
+   .frm{padding:3%;}
+   @media (max-width: 600px){
+     #profile-upload{float:none;margin:auto;}
+   }
+  
