New changes for profile 1.0.1

--- a/styles/scss/_variables.scss
+++ b/styles/scss/_variables.scss
@@ -1,4 +1,7 @@
 // variable initialization
 
-$primary-color : #00C853;
+$primary-color : #21E6C1;
 $font-white : #F5F5F5;
+$secondary-color:#071E3D;
+$color-info : #278EA5;
+$color-blue:#1F4287;
