--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -9,9 +9,9 @@
     color: $font-white;
 }
 
-body{
-    background-color: $secondary-color;
-}
+// body{
+//     background-color: $secondary-color;
+// }
 
 .title{
     color: $font-white;
